Advancing 0.16.0-m0 release to status: released
Signed-off-by: Maayan Friedman <maafried@redhat.com>

--- a/releases/v0.16.0-m0.yaml
+++ b/releases/v0.16.0-m0.yaml
@@ -1,7 +1,7 @@
 ---
 version: v0.16.0-m0
 name: 0.16.0-m0
-status: installers
+status: released
 components:
   shipyard: e333c1b82ac2e67f1e9ae8b41238ba63e44f4c8f
   admiral: 425c51d62337866c277a26a54995d22637ba7139
@@ -9,3 +9,5 @@ components:
   lighthouse: ed0054ac12f0742faf9668115356220327a1f63a
   submariner: 2a45ad95369a635799323a8109bd62f22eb80c2f
   submariner-operator: b39de406486ddc976fc9ac667cd7985e66aeca20
+  subctl: a95e26b4aa08f1efb2261677ed73fd0e671f98a5
+  submariner-charts: c1cd94a2297316e8cf6254b757aeda1de3c807a4
