--- a/releases/v0.15.1.yaml
+++ b/releases/v0.15.1.yaml
@@ -2,6 +2,7 @@
 version: v0.15.1
 name: 0.15.1
 branch: release-0.15
-status: shipyard
+status: admiral
 components:
   shipyard: 95e8f41ab7c630ced095cf5d426517373f0812ba
+  admiral: d436d3e8405ec5f7415c5f9d0be6883be2780239
