Advancing 0.13.6 release to status: projects
Signed-off-by: Janki Chhatbar <jchhatba@redhat.com>

--- a/releases/v0.13.6.yaml
+++ b/releases/v0.13.6.yaml
@@ -2,7 +2,10 @@
 version: v0.13.6
 name: 0.13.6
 branch: release-0.13
-status: admiral
+status: projects
 components:
   shipyard: 29ccdd64be81bd40aae5e51901318296eeb566d6
   admiral: 9336c798067b85861491b94f8d6d2da5df1fdfac
+  cloud-prepare: 3c2f5aadc438a7d1507d758b32faa21b5bbd577a
+  lighthouse: 869b46e3aa363f63a3ea44c91b962d328658b931
+  submariner: 1f31a396084716f12cf66970c1c951fe138063c0
