--- a/releases/v0.13.6.yaml
+++ b/releases/v0.13.6.yaml
@@ -2,10 +2,12 @@
 version: v0.13.6
 name: 0.13.6
 branch: release-0.13
-status: projects
+status: installers
 components:
   shipyard: 29ccdd64be81bd40aae5e51901318296eeb566d6
   admiral: 9336c798067b85861491b94f8d6d2da5df1fdfac
   cloud-prepare: 3c2f5aadc438a7d1507d758b32faa21b5bbd577a
   lighthouse: 869b46e3aa363f63a3ea44c91b962d328658b931
   submariner: 1f31a396084716f12cf66970c1c951fe138063c0
+  submariner-charts: 73234aca328fa3903d46035fec62ad49f9dffe47
+  submariner-operator: 93a8d03cb324fa7d0d2356d1580f4cbe0977ab41
