--- a/releases/v0.15.2.yaml
+++ b/releases/v0.15.2.yaml
@@ -2,6 +2,7 @@
 version: v0.15.2
 name: 0.15.2
 branch: release-0.15
-status: shipyard
+status: admiral
 components:
   shipyard: 95e8f41ab7c630ced095cf5d426517373f0812ba
+  admiral: 2cbb49a6ac70dae15f36d7c00207d47933ad0bd1
