Advancing 0.16.0-m2 release to status: admiral
Signed-off-by: Janki Chhatbar <jchhatba@redhat.com>

--- a/releases/v0.16.0-m2.yaml
+++ b/releases/v0.16.0-m2.yaml
@@ -1,6 +1,7 @@
 ---
 version: v0.16.0-m2
 name: 0.16.0-m2
-status: shipyard
+status: admiral
 components:
   shipyard: 539fcfe05e099638d2c2bd7781b1b8b382bcb95e
+  admiral: dce26687e81835d830d0bac3c3577b268b26824f
