--- a/releases/v0.16.0-m3.yaml
+++ b/releases/v0.16.0-m3.yaml
@@ -1,6 +1,7 @@
 ---
 version: v0.16.0-m3
 name: 0.16.0-m3
-status: shipyard
+status: admiral
 components:
   shipyard: c898dd17c1a414f4ee5b42c30f7f316a380194d9
+  admiral: 6febc35a01d2fe109fa46d8432edc55dc5a33332
