Only release images on submariner-io
This avoids attempting to release images from forks.

Signed-off-by: Stephen Kitt <skitt@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,7 @@ permissions:
 jobs:
   release:
     name: Release
+    if: github.repository_owner == 'submariner-io'
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repository
