--- a/releases/v0.14.7.yaml
+++ b/releases/v0.14.7.yaml
@@ -2,6 +2,7 @@
 version: v0.14.7
 name: 0.14.7
 branch: release-0.14
-status: shipyard
+status: admiral
 components:
   shipyard: 848c5d03f57de35f5d5d8b92e1873bdd1f5e3914
+  admiral: ed35ab373bfc800b577208c9706f322651694c04
