Advancing 0.15.3 release to status: admiral
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>

--- a/releases/v0.15.3.yaml
+++ b/releases/v0.15.3.yaml
@@ -2,6 +2,7 @@
 version: v0.15.3
 name: 0.15.3
 branch: release-0.15
-status: shipyard
+status: admiral
 components:
   shipyard: 238a4dc1e5b0949780dcf91be2f9e5c80f8d63bb
+  admiral: a1623fea64d116e31cdd5e5d189264312c8f598f
