--- a/releases/v0.16.1.yaml
+++ b/releases/v0.16.1.yaml
@@ -2,6 +2,7 @@
 version: v0.16.1
 name: 0.16.1
 branch: release-0.16
-status: shipyard
+status: admiral
 components:
   shipyard: 078f5a9ee1d3da5e6bed13e3ffd372da138f4cbc
+  admiral: 255fd2823b41c2fafa8214aa192527aaf103c771
