--- a/releases/v0.16.2.yaml
+++ b/releases/v0.16.2.yaml
@@ -2,6 +2,7 @@
 version: v0.16.2
 name: 0.16.2
 branch: release-0.16
-status: shipyard
+status: admiral
 components:
   shipyard: 3d7d32af48088a404a5280c009fe8e597c3bbc79
+  admiral: 7e54dca43530d3af5b725c4cd60bdb16cb5456a4
