Send subctl version updates to krew-index
Now that subctl is available as a krew plugin, a PR needs to be sent to
krew-index repo to update subctl version when a new version is released.
krew-release-bot automates this process by adding a .krew.yaml file and
a GHA to our release process.

This PR adds a GHA that automatically pushes a PR to krew-index repo
updating the subctl version, by rendering .krew.yaml file, after a new
submariner version is tagged.

For detailed read: https://github.com/rajatjindal/krew-release-bot

Epic: https://github.com/submariner-io/enhancements/issues/182

Signed-off-by: Janki Chhatbar <jchhatba@redhat.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,3 +37,6 @@ jobs:
           RELEASE_TOKEN: ${{ secrets.RELEASE_TOKEN }}
           GITHUB_JOB_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/jobs/${{ github.job }}
         run: make do-release
+
+      - name: Update new version in krew-index
+        uses: rajatjindal/krew-release-bot@v0.0.46
