--- a/releases/v0.17.0-m3.yaml
+++ b/releases/v0.17.0-m3.yaml
@@ -1,7 +1,7 @@
 ---
 version: v0.17.0-m3
 name: 0.17.0-m3
-status: installers
+status: released
 components:
   shipyard: 502f9bfb889428d1cfcf9324d76c4d400df12ea2
   admiral: 8967800c21aa1478e7a59fda8f25af76cd8a7d21
@@ -9,3 +9,5 @@ components:
   lighthouse: 13f8c1d7f041355360a2031d34bf050d93b215c1
   submariner: 4c559171af5ce7fcd13ddf3a74c52e2a57adb2b1
   submariner-operator: e4e8bb978faf7e5b8ff2b960e412d18412a27c28
+  subctl: 3f4679efc7c195da0dbf3016ca3a2ce89e9a50de
+  submariner-charts: 11a94293d2f800f49456d5bf70c3da976c806419
