Advancing 0.16.3 release to status: projects
Signed-off-by: Aswin Suryanarayanan <asuryana@redhat.com>

--- a/releases/v0.16.3.yaml
+++ b/releases/v0.16.3.yaml
@@ -2,7 +2,10 @@
 version: v0.16.3
 name: 0.16.3
 branch: release-0.16
-status: admiral
+status: projects
 components:
   shipyard: 03f30315107ee1cdc2ebb68df25db633946cd86c
   admiral: 9402bbb79146a29a31aa54fb26b350d9e03bb8de
+  cloud-prepare: f86e0f635ee364967158d7fd12ebbd82d12ce96d
+  lighthouse: 487f6296ce9b5dc774053f742cf25c742a21314e
+  submariner: 58e6b641a7367a217421735101d3b18ba6662698
