Update branch tags to match Shipyard
Shipyard has been reworked, in particular it uses SHIPYARD_TAG instead
of BASE_BRANCH.

Signed-off-by: Stephen Kitt <skitt@redhat.com>

--- a/Dockerfile.dapper
+++ b/Dockerfile.dapper
@@ -1,5 +1,6 @@
-ARG BASE_BRANCH
-FROM quay.io/submariner/shipyard-dapper-base:${BASE_BRANCH}
+ARG SHIPYARD_REPO=quay.io/submariner
+ARG SHIPYARD_TAG=devel
+FROM ${SHIPYARD_REPO}/shipyard-dapper-base:${SHIPYARD_TAG}
 
 ENV DAPPER_SOURCE=/releases PATH=/releases/scripts:$PATH DAPPER_DOCKER_SOCKET=true \
     DAPPER_ENV="CI GIT_EMAIL GIT_NAME GITHUB_ACTOR GITHUB_REPOSITORY_OWNER GITHUB_TOKEN MAKEFLAGS QUAY_USERNAME QUAY_PASSWORD RELEASE_TOKEN"
