Advancing 0.17.0-rc0 release to status: admiral
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>

--- a/releases/v0.17.0-rc0.yaml
+++ b/releases/v0.17.0-rc0.yaml
@@ -2,6 +2,7 @@
 version: v0.17.0-rc0
 name: 0.17.0-rc0
 branch: release-0.17
-status: shipyard
+status: admiral
 components:
   shipyard: a8a0e4cda0b1c8bfeb997d090fe0d88d3b3d8bb2
+  admiral: eb9dfbd134d0111cf3ffb04981d35edb0d4874e9
