Add code owners for the releases dir
...so others can merge the generated release PRs.

Signed-off-by: Tom Pantelis <tompantelis@gmail.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,3 +1,4 @@
 # Auto-generated, do not edit; see CODEOWNERS.in
 * @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis
 *.md @dfarrell07 @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis
+releases/* @aswinsuryan @dfarrell07 @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis @vthapar
