--- a/releases/v0.17.0-rc0.yaml
+++ b/releases/v0.17.0-rc0.yaml
@@ -2,7 +2,7 @@
 version: v0.17.0-rc0
 name: 0.17.0-rc0
 branch: release-0.17
-status: installers
+status: released
 components:
   shipyard: a8a0e4cda0b1c8bfeb997d090fe0d88d3b3d8bb2
   admiral: eb9dfbd134d0111cf3ffb04981d35edb0d4874e9
@@ -10,3 +10,5 @@ components:
   lighthouse: 7d0ebca9411fa72b20ceb65f4bb7e816a668fd14
   submariner: c310c7fd8301775ec357217e97a1f142439d0d45
   submariner-operator: 096f17dd3c2cbea245cf1345da748f78af2156fb
+  subctl: a9ce573aa6672b63e584a15526ce0ada7b863f95
+  submariner-charts: 62d30c02da7a26ae38a4cf721080e5d9e705d74e
