Add vthapar as code owner
Signed-off-by: Stephen Kitt <skitt@redhat.com>
(cherry picked from commit 07b7cc7983fb93d73aaf659b00fdca2273681fe5)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,4 +1,4 @@
 # Auto-generated, do not edit; see CODEOWNERS.in
-* @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis
-*.md @dfarrell07 @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis
+* @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis @vthapar
+*.md @dfarrell07 @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis @vthapar
 releases/* @aswinsuryan @dfarrell07 @mkolesnik @Oats87 @skitt @sridhargaddam @tpantelis @vthapar
