Add Yossi and Maayan as committers to releases/*
Relates-to: submariner-io/submariner#2900
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>
(cherry picked from commit 3b329f064926611a776034319ea2ac14009f5388)

--- a/CODEOWNERS.in
+++ b/CODEOWNERS.in
@@ -1,8 +1,10 @@
 @aswinsuryan releases/*
 @dfarrell07 *.md releases/*
+@maayanf24 releases/*
 @mkolesnik * 
 @Oats87 *
 @skitt *
 @sridhargaddam *
 @tpantelis *
 @vthapar *
+@yboaron releases/*
