Advancing 0.17.0 release to status: admiral
Signed-off-by: Janki Chhatbar <jchhatba@redhat.com>

--- a/releases/v0.17.0.yaml
+++ b/releases/v0.17.0.yaml
@@ -2,6 +2,7 @@
 version: v0.17.0
 name: 0.17.0
 branch: release-0.17
-status: shipyard
+status: admiral
 components:
   shipyard: 81b7e55f5306dfcb523b5b05397d3e6c88cb1d46
+  admiral: e6ea956a194a3093a099e8829c584d1e8317587a
