Advancing 0.18.0-m1 release to status: released
Signed-off-by: Maayan Friedman <maafried@redhat.com>

--- a/releases/v0.18.0-m1.yaml
+++ b/releases/v0.18.0-m1.yaml
@@ -1,7 +1,7 @@
 ---
 version: v0.18.0-m1
 name: 0.18.0-m1
-status: installers
+status: released
 components:
   shipyard: bd64f6efc9e75ad69b4d04a56252f577d22a9131
   admiral: a0cba6b1968d6b980f5bc74b65a4e963eb4a5e2e
@@ -9,3 +9,5 @@ components:
   lighthouse: 979a87d0c8137207e7186b37b496cea19bd23bdd
   submariner: 5f1e2ae18b83dc6041b446bda9e9ed7858c4ab1a
   submariner-operator: e051de518fdf9fd91587839bdc4eae68c9955179
+  subctl: ba683f48623c75f0b15e128cc64fff51ee88dcec
+  submariner-charts: 2a5326a2c3b135b37a0e5212653520c96f3fa523
