Advancing 0.17.1 release to status: admiral
Signed-off-by: Daniel Farrell <dfarrell@redhat.com>

--- a/releases/v0.17.1.yaml
+++ b/releases/v0.17.1.yaml
@@ -2,6 +2,7 @@
 version: v0.17.1
 name: 0.17.1
 branch: release-0.17
-status: shipyard
+status: admiral
 components:
   shipyard: 1e49b8404147ac9e1cf0f439c7828f82940a216d
+  admiral: 3d1553cdf262546df354b86ab6af5950c2f3df80
