Advancing 0.16.5 release to status: admiral
Signed-off-by: Tom Pantelis <tompantelis@gmail.com>

--- a/releases/v0.16.5.yaml
+++ b/releases/v0.16.5.yaml
@@ -2,6 +2,7 @@
 version: v0.16.5
 name: 0.16.5
 branch: release-0.16
-status: shipyard
+status: admiral
 components:
   shipyard: bf200180fe216b7608dc45e9b42605de08ea013b
+  admiral: 4e8c85d8c77da67de399c6cf8fa1bfd7c3ae4a19
