Advancing 0.19.0-m0 release to status: released
Signed-off-by: Maayan Friedman <maafried@redhat.com>

--- a/releases/v0.19.0-m0.yaml
+++ b/releases/v0.19.0-m0.yaml
@@ -1,7 +1,7 @@
 ---
 version: v0.19.0-m0
 name: 0.19.0-m0
-status: installers
+status: released
 components:
   shipyard: db01484410c75ab809fef557fa21704e3920bc1a
   admiral: 5392652c02fee43d1cce1d63b0fd1c70d6f9d779
@@ -9,3 +9,5 @@ components:
   lighthouse: ce885300bc1643f15ccfce16049b9ea7f7d4dd0e
   submariner: 0b17499ef790484fd085f150f5430cdbe5e7b4b0
   submariner-operator: be0e089dbaf0381d0b8975456e94f2bf34c9031b
+  subctl: a8697fdb4ad8bdb32d2c3fbcbea08bfbd5148d3f
+  submariner-charts: fd88fcff1da198bd2812e36c67ecd46a495fd840
