--- a/releases/v0.15.4.yaml
+++ b/releases/v0.15.4.yaml
@@ -2,7 +2,10 @@
 version: v0.15.4
 name: 0.15.4
 branch: release-0.15
-status: admiral
+status: projects
 components:
   shipyard: ee36f8db9bb73ce639172c467ebac459e221bcbf
   admiral: 6e80d87c7dac47defdab57cbefeea178d36e50e9
+  cloud-prepare: 9cdd3b329cc28af7e5c74161c1253ebaadab78fc
+  lighthouse: 115df92c02c6e8e4b3a2e3657170ea1fdcddb866
+  submariner: 0887d880463b9e21ce53ea6698d6f8cfba210c9e
