Advancing 0.18.0 release to status: admiral
Signed-off-by: Maayan Friedman <maafried@redhat.com>

--- a/releases/v0.18.0.yaml
+++ b/releases/v0.18.0.yaml
@@ -2,6 +2,7 @@
 version: v0.18.0
 name: 0.18.0
 branch: release-0.18
-status: shipyard
+status: admiral
 components:
   shipyard: 011349c6f17e8cbd2693645a4662e43cfa84341a
+  admiral: bcb4f04986a22822a54aa4736717f217a2187190
